--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 </head>
 <body>
     <div class="gameboy">
-        <img src="images/gameboy png.webp" alt="">
+        <img src="images/gameboy png.webp" alt="" class="gb">
        <img src="images/pixil-frame-0 (1).png" alt="" class="tamagotchi">
         
     </div> 
-   
+   <audio controls>
+        <source src="sounds/[FREE FOR PROFIT] VIDEO GAME X 8 BIT TYPE BEAT “Armed & Dangerous” [m6e7sEl1i9E].mp3" type="audio/mpeg">
+        <source src="sounds/[FREE FOR PROFIT] VIDEO GAME X 8 BIT TYPE BEAT “Armed & Dangerous” [m6e7sEl1i9E].mp3" type="audio/ogg">
+   </audio>
 </body>
 </html>
