--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
        <img src="images/pixil-frame-0 (1).png" alt="" class="tamagotchi">
         
     </div> 
+    <button class="beat" id="button">afspelen</button>
    <audio controls>
         <source src="sounds/[FREE FOR PROFIT] VIDEO GAME X 8 BIT TYPE BEAT “Armed & Dangerous” [m6e7sEl1i9E].mp3" type="audio/mpeg">
         <source src="sounds/[FREE FOR PROFIT] VIDEO GAME X 8 BIT TYPE BEAT “Armed & Dangerous” [m6e7sEl1i9E].mp3" type="audio/ogg">
    </audio>
+
+   <script>
+        const button = document.getElementById('button');
+        button.addEventListener('click', playmusic);
+
+        function playmusic() {
+            const audio = document.querySelector('audio');
+            audio.play();
+        }
+        
+   </script>
+   <link rel="stylesheet" href="main.js">
 </body>
 </html>
